k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: globetrotter
  labels:
    app.kubernetes.io/part-of: globetrotter
